# SideRedis

./: .gitignore  LICENSE  README.md  pyproject.toml
side_redis/: __init__.py  connection_store.py  main.py  redis_client.py
side_redis/ui/: __init__.py  add_key_dialog.py  connection.py  info_panel.py  key_detail.py  keys_browser.py  terminal.py
