[project]
name = "side-redis"
version = "0.1.0"
description = "A Redis visual client built with PySide6 - Multi-threading optimized"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.5",
    "pytest>=9.0.2",
    "redis>=5.0",
]

[project.scripts]
side-redis = "side_redis.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["side_redis"]
